--- a/style.css
+++ b/style.css
@@ -17,76 +17,81 @@ body {
 nav ul li {
     display: inline;
     padding: 10px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: black;
-}
-
-#blueg {
-    color: rgb(0, 89, 255);
-    margin-left: -20px;
-    font-family: 'productsans';
-}
-
-#redo {
-    color: rgba(255, 38, 0, 0.89);
-    margin-left: -20px;
-}
-
-#bluegg {
-    color: rgb(0, 89, 255);
-    margin-left: -20px;
-}
-
-#yellowo {
-    color: yellow;
-    margin-left: -20px;
-}
-
-#greenl {
-    color: green;
-    margin-left: -20px;
-}
-
-#rede {
-    color: rgba(255, 38, 0, 0.89);
-    margin-left: -20px;
-}
-
-nav {
-    /* float: right; */
-    font-size: 14px;
-    position: relative;
-    left: 1000px;
-}
-
-.signin {
-    background-color: blue;
-    padding: 7px 22px;
-    border-radius: 5px;
-}
-
-.box1 {
-    display: flex;
-    margin: 0 auto;
-    border-radius: 20px;
-    margin-top: -70px;
-    width: 500px;
-    height: 40px;
-    border: solid 1px grey;
-    background-image: url(media/loupe.png);
-    background-size: 25px;
-    background-repeat: no-repeat;
-    background-position: 10px 10px;
-}
-
-.box1:hover {
-    box-shadow: 3px 3px 3px grey;
-}
+    background-color: azure;
 
 
-.signin a {
-    color: white;
-}
+    nav ul li a {
+        text-decoration: none;
+        color: black;
+    }
+
+    nav ul li {
+        display: inline;
+        padding: 10px;
+    }
+
+    #blueg {
+        color: rgb(0, 89, 255);
+        margin-left: -20px;
+        font-family: 'productsans';
+    }
+
+    #redo {
+        color: rgba(255, 38, 0, 0.89);
+        margin-left: -20px;
+    }
+
+    #bluegg {
+        color: rgb(0, 89, 255);
+        margin-left: -20px;
+    }
+
+    #yellowo {
+        color: yellow;
+        margin-left: -20px;
+    }
+
+    #greenl {
+        color: green;
+        margin-left: -20px;
+    }
+
+    #rede {
+        color: rgba(255, 38, 0, 0.89);
+        margin-left: -20px;
+    }
+
+    nav {
+        /* float: right; */
+        font-size: 14px;
+        position: relative;
+        left: 1000px;
+    }
+
+    .signin {
+        background-color: blue;
+        padding: 7px 22px;
+        border-radius: 5px;
+    }
+
+    .box1 {
+        display: flex;
+        margin: 0 auto;
+        border-radius: 20px;
+        margin-top: -70px;
+        width: 500px;
+        height: 40px;
+        border: solid 1px grey;
+        background-image: url(media/loupe.png);
+        background-size: 25px;
+        background-repeat: no-repeat;
+        background-position: 10px 10px;
+    }
+
+    .box1:hover {
+        box-shadow: 3px 3px 3px grey;
+    }
+
+    .signin a {
+        color: white;
+    }
